# lectures-homeworks

./: .env_template  .gitignore  comprehensions.py  jack_sparrow.ipynb  pyproject.toml  requirements.txt  task_1.ipynb  task_2.ipynb  task_3.ipynb  test.ipynb  test_env_pydantic.py
Lectures/lecture_6/: task.py
lecture_1/: event_planner.py  main.py  mine.py  mine_extended.py
lecture_10/: pyproject.toml
lecture_2/: homework.py  pyproject.toml  task.ipynb
lecture_3/: main.py  pyproject.toml  task(2).ipynb  task.py
lecture_4/: c_and_r.py  harder.py  homework.ipynb  homework.py  p.py  pyproject.toml  work in the class(20.09).py
lecture_5/: f_in_f.py  main.py  my_functions.py  our_imports.py  pyproject.toml  task_1.ipynb  task_2.ipynb  task_2.py
lecture_6/: main.py  pyproject.toml  task(3).ipynb  task.ipynb  task.py
lecture_7/:  task.py  complex.py  pyproject.toml  simple.py  task.ipynb
lecture_8/: main.py  pyproject.toml  task_beetles.ipynb
lecture_9/: class.py  pyproject.toml
lecture_A/: pyproject.toml
lecture_A/src/my_package/: __init__.py  aa.py  hello.py
lecture_A/src/my_package/models/: user.py
lecture_A/src/my_package/utils/: detectors.py
lecture_A/test / my_package/model/: test_user.py
lecture_spec/: index.html  main_task.py  pyproject.toml  req.py
math/: pyproject.toml
nlp_lecture_1/: main.py  nlp.ipynb  nlp_1.ipynb  pyproject.toml
src/lecture_llm_api/: .env  ask_model.py  embed_test.py  settings.py  test_env.py
src/lecture_llm_api/.ipynb_checkpoints/: ask_model-checkpoint.py
