[project]
name = "lectures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.9",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.0",
    "rich>=14.1.0",
]

[tool.uv.workspace]
members = [
    "lecture_3",
    "lecture_2",
    "lecture_4",
    "math",
    "lecture_5",
    "lecture_6",
    "lecture_7",
    "nlp_lecture_1",
    "lecture_8",
    "lecture_9",
    "lecture_spec",
    "lecture_10",
    "lecture_A",
]
